--- a/frontend/templates/register.html
+++ b/frontend/templates/register.html
@@ -13,7 +13,7 @@
         <form method="POST" class="card-form">
             <p class="page-indicator" style="margin: 0;">Register</p>
             {% if error_msg %}
-                <div style="color: red;">
+                <div style="color: red; text-align: left;">
                     {{ error_msg }}
                 </div>
             {% endif %}
